# adaptive-cards-python

./: README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  publish.yaml
adaptive_cards_python/: Action.py  AdaptiveCard.py  Element.py  Extendable.py  __init__.py  case_insensitive_literal.py  config.py  msteams.py  validation.py
adaptive_cards_python/adaptive_card/: Action.py  AdaptiveCard.py  Element.py  config.py
tests/: test_case_insensitive_literal.py  test_validation.py
