[project]
name = "adaptive-cards-python"
dynamic = ["version"]
description = "Fully typed & validated Adaptive Card implementation in pydantic."
readme = "README.md"
authors = [{ name = "Emir Karamehmetoglu", email = "emirk@axis.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic-extra-types>=2.10.4",
    "pydantic>=2.11.4",
    "orjson>=3.10.18",
    "jsonschema>=4.23.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8", "datamodel-code-generator[http]"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.1.0"

[[tool.uv.index]]
name = "axis"
url = "https://artifacts.se.axis.com/artifactory/api/pypi/all-pypi/simple/"

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"

[[tool.uv.index]]
name = "axis-ddm-prod"
url = "https://artifacts.se.axis.com/artifactory/api/pypi/ddm-pypi/"
publish-url = "https://artifacts.se.axis.com/artifactory/api/pypi/ddm-pypi/"
explicit = true
